    breaks the RecursiveIterator). (Paul Garvin)

- Sqlite3:
  . Fixed bug #68260 (SQLite3Result::fetchArray declares wrong
    required_num_args). (Julien)

- Standard:
  . Fixed bug #69523 (Cookie name cannot be empty). (Christoph M. Becker)
  . Fixed bug #69325 (php_copy_file_ex does not pass the argument).
    (imbolk at gmail dot com)
  . Fixed bug #69299 (Regression in array_filter's $flag argument in PHP 7).
    (Laruence)
  . Removed call_user_method() and call_user_method_array() functions. (Kalle)
  . Fixed user session handlers (See rfc:session.user.return-value). (Sara)
  . Added intdiv() function. (Andrea)
  . Improved precision of log() function for base 2 and 10. (Marc Bennewitz)
  . Remove string category support in setlocale(). (Nikita)
  . Remove set_magic_quotes_runtime() and its alias magic_quotes_runtime().
    (Nikita)
  . Fixed bug #65272 (flock() out parameter not set correctly in windows).
    (Daniel Lowrey)
  . Added preg_replace_callback_array function. (Wei Dai)
  . Deprecated salt option to password_hash. (Anthony) 
  . Added Windows support for getrusage(). (Kalle)

- Streams:
  . Fixed bug #68532 (convert.base64-encode omits padding bytes).
    (blaesius at krumedia dot de)
  . Removed set_socket_blocking() in favor of its alias stream_set_blocking().
    (Nikita)

- XSL:
  . Fixed bug #64776 (The XSLT extension is not thread safe). (Mike)
  . Removed xsl.security_prefs ini option. (Nikita)

- Zlib:
  . Added deflate_init(), deflate_add(), inflate_init(), inflate_add()
    functions allowing incremental/streaming compression/decompression.
    (Daniel Lowrey & Bob Weinand)

- Zip:
  . Added ZipArchive::setCompressionName and ZipArchive::setCompressionIndex
    methods (Remi, Cedric Delmas)
  . Update bundled libzip to 1.0.1 (Remi, Anatol)
  . Fixed bug #67161. (ZipArchive::getStream() returns NULL for certain file)
    (Christoph M. Becker)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>